INCLUDE_DIRECTORIES(${LibHDR_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

LINK_DIRECTORIES(${LibHDR_SOURCE_DIR}/src)
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

SET(LIBHDR_TEST1
    mockcallback.h
    consolecallbackmt.h
    test1.cpp)

ADD_EXECUTABLE(test1 ${LIBHDR_TEST1})
TARGET_LINK_LIBRARIES(test1 LibHDR ${Boost_LIBRARIES})

SET(LIBHDR_TEST2
    test2.cpp)

ADD_EXECUTABLE(test2 ${LIBHDR_TEST2})
TARGET_LINK_LIBRARIES(test2 LibHDR ${Boost_LIBRARIES})

ADD_TEST(test_corecallback_coreobject ${CMAKE_CURRENT_BINARY_DIR}/test1)
